base-installer (1.100) UNRELEASED; urgency=low

  [ Frans Pop ]
  * Drop support for the ppc64 architecture.

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Silently skip non-existent devices in /proc/swaps (LP: #290947).

 -- Frans Pop <fjp@debian.org>  Tue, 21 Apr 2009 20:39:42 +0200

base-installer (1.99) unstable; urgency=low

  [ Ian Campbell ]
  * Use -686 kernels for CentaurHauls processors again (effectively
    undoing r55059). According to 464962 the kernel has been fixed since
    2.6.26-8. Closes: #504095

  [ Colin Watson ]
  * Merge from Ubuntu:
    - If base-installer/use_unclean_target is asked, emit a warning to the
      logs so that we know about it when diagnosing problems.
    - Never select /dev/ramzswap* (compcache) as a hibernation target.
    - Check dmraid's exit code rather than parsing its output.
  * Fix hppa kernel selection: "64?" and "(64)?" are not the same thing in
    regular expressions!
  * Add armel/qemu-versatilepb test; cpuinfo supplied by Oliver Grawert.

  [ Christian Perrier ]
  * Correct an error in the Spanish translation. Closes: #510310

  [ Jens Seidel ]
  * Minor correction in German translation.  Closes: #512828.

  [ Martin Michlmayr ]
  * Add support for Marvell's Kirkwood platform.
  * Remove support for the old arm port.

  [ Updated translations ]
  * (ast.po) by Marcos Alvarez Costales
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Felipe Castro
  * Basque (eu.po) by Piarres Beobide
  * Galician (gl.po) by marce villarino
  * Hindi (hi.po) by Kumar Appaiah
  * Italian (it.po) by Milo Casagrande
  * Kazakh (kk.po) by Dauren Sarsenov
  * Malayalam (ml.po) by Praveen Arimbrathodiyil
  * Marathi (mr.po) by Sampada
  * Thai (th.po) by Theppitak Karoonboonyanan
  * Tagalog (tl.po) by Eric Pareja
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 27 Mar 2009 18:00:30 +0100

base-installer (1.98) unstable; urgency=low

  [ Colin Watson ]